# ai_models

./: .gitignore  README.md  notes.md  pyproject.toml
src/local_ai_lab/: __init__.py  app.py  chat_store.py  cli.py  config.py  generate.py  inspect_weights.py  ollama.py  pdf_search.py  web_search.py
src/local_ai_lab/templates/: explore.html  index.html
